【修复】读条卡死
Signed-off-by: CamilleFerros <80734960+CartmanORCamille@users.noreply.github.com>

--- a/console/webGUI/html/OPSVN.html
+++ b/console/webGUI/html/OPSVN.html
@@ -155,10 +155,10 @@
                             <div class="radio">
                                 <h4>人物控制</h4>
                                 <label class="checkbox-inline">
-                                    <input type="radio" value="gamePlayOfObserve" name='gamePlay' checked>定点观察
+                                    <input type="radio" value="Stand" name='gamePlay' checked>定点观察
                                 </label>
                                 <label class="checkbox-inline">
-                                    <input type="radio" value="gamePlayOfRun" name='gamePlay'>跑图
+                                    <input type="radio" value="Run" name='gamePlay'>跑图
                                 </label>
                             </div>
 
